# project-euler

./: .bazelrc  .buckconfig  .buckconfig.win.ini  .gitignore  .gitmodules  BUILD  CLAUDE.md  CMakeLists.txt  LICENSE  MODULE.bazel  PI.md  README.md  WORKSPACE  b.sh  bBazel.sh  bETFModelingBuck2.sh  bazel-bin  bazel-out  bazel-project-euler  bazel-testlogs  build.ninja  c.sh  cCommon.sh  cIt.sh  cNoDep.sh  d.sh  e.sh  eBazel.sh  p.sh  prepareCodeJam.py  projectEuler.sln  r.sh  sd.sh  setupUbuntu.sh  ubuntuPackages.txt  ubuntuPipPackages.txt
CovMatrix/: BUCK  BUILD  CovMatrix.cpp  build.ninja
DelphiTest/: ProjectTest.dpr  ProjectTest.dproj  ProjectTest.dproj.local  UnitTest.dfm  UnitTest.pas
ETFModeling/: AGG.csv  AMZN.csv  BND.csv  BUCK  BUILD  CEFS.csv  CVY.csv  ETFModeling.cpp  ETFModelingTest.cpp  FB.csv  FBIOX.csv  FBND.csv  FCEF.csv  FDHY.csv  FDIS.csv  FDIV.csv  FNCMX.csv  FSEAX.csv  FSKAX.csv  FSPSX.csv  FXAIX.csv  GLD.csv  GME.csv  GOOG.csv  GYLD.csv  HDV.csv  HIPS.csv  HNDL.csv  IEFA.csv  INKM.csv  IVV.csv  IWM.csv  IYLD.csv  LQD.csv  MDIV.csv  MGK.csv  MLTI.csv  MSFT.csv  NCLH.csv  OGZPY.csv  (+27 more)
ETFModeling2/: README.md  portfolio_model.py
GdmMlTest/: BUILD  build.by  buildBazel.py  catboostTestModel.bin.onnx  convertCatboostModels.py  convertModels.py  convertTl2cgenModels.py  data.data  gdmMlTest.cpp  gen.py  generate_data.py  lightgbm_model.cbm  lightgbm_model.onnx  lightgbm_model.txt  run.py  run.sh
Kaboom/: BUCK  Kaboom.cpp  build.ninja
Mnist/: BUCK  Mnist.cpp  build.ninja
ReutersStat/: BUCK  ReutersStat.cpp  build.ninja
SortedIterator/: BUCK  (+2 more)
(+1881 files in other folders)
